[gd_scene load_steps=8 format=3 uid="uid://b5ny7o0pvajwf"]

[ext_resource type="Script" path="res://Sceans/Paltforms/One time destrouction/p_1.gd" id="1_pct5y"]
[ext_resource type="Texture2D" uid="uid://copicp2mlggtk" path="res://Assets/Game Ass/env/Stringstar fields/tileset.png" id="1_qnuli"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p1cb"]
size = Vector2(79, 4)

[sub_resource type="Animation" id="Animation_r60ag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_w1fx0"]
resource_name = "ahake"
length = 0.1
loop_mode = 2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2, 0), Vector2(-2, 0)]
}

[sub_resource type="Animation" id="Animation_dijh8"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4oc5g"]
_data = {
"RESET": SubResource("Animation_r60ag"),
"ahake": SubResource("Animation_w1fx0"),
"idle": SubResource("Animation_dijh8")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_pct5y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -1)
shape = SubResource("RectangleShape2D_7p1cb")
debug_color = Color(0.834413, 0.00130858, 0.935643, 0.42)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(98, 544)
collision_layer = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-96, -546)
shape = SubResource("RectangleShape2D_7p1cb")
debug_color = Color(0, 0.608081, 0.650804, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_4oc5g")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2, 0)
texture = ExtResource("1_qnuli")
region_enabled = true
region_rect = Rect2(76.6221, 61.2532, 85.2436, 11.0265)

[node name="Timer" type="Timer" parent="."]

[node name="fall untill" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="fall untill" to="." method="_on_fall_untill_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
